<resources>
    <string name="app_name">Lab 07 - Key (Lukyanov)</string>
    <string name="label_key">Key</string>
    <string name="label_value">Value</string>
    <string name="btn_insert">INSERT</string>
    <string name="btn_replace">UPDATE</string>
    <string name="btn_select">SELECT</string>
    <string name="btn_delete">DELETE</string>
    <string name="label_delete">Are you sure?</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
</resources>